四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -309,6 +309,13 @@ for i = 1:size(t)
     % 2D旋转矩阵
     R = [cos(phi) sin(phi);
      -sin(phi) cos(phi)];
+     % 通过把四旋翼在机体坐标系下的关键点变换到地球坐标系下
+	% 用于画四旋翼在地球坐标系下的真实姿态
+	%% 详细解析：该矩阵描述的是绕 x轴的旋转（在 y-z 平面内的投		影）。当phi为正时，四旋翼向右
+
+1.齐次变换：通过齐次矩阵 “wHb” 将机体坐标系下的点变换到地球坐标系，结合旋转和平移操作。
+
+2.动态绘制：使用 “drawnow” 强制刷新图形窗口，实现动画效果。
     wHb = [R quadrotor_pos; 0 0 1]; % 齐次变换矩阵
     
     % 更新图形对象
@@ -319,8 +326,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM5MzU4MTc3LC05MTg4NzMwMDQsMTE4OD
-IxOTM5LC00NjgxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2Njks
-LTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtND
-IzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbLTE5MTM4Nzc2NjIsLTkxODg3MzAwNCwxMT
+g4MjE5MzksLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2
+OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC
+00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
 -->
