四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -318,18 +318,35 @@ for i = 1:size(t)
     wHb = [R quadrotor_pos; 0 0 1]; 
     quadrotor_world = wHb * Quadrotor_Body;
 	% [3x3][3x8]
-quadrotor_atti = quadrotor_world(1:2, :);
+	quadrotor_atti = quadrotor_world(1:2, :);
+	%% 坐标变换
+	
+    % 四旋翼画图（更新图形对象数据）
 
-%% 坐标变换
-    % 更新图形对象
-    set(h1, 'XData', quadrotor_atti(1,[1 2]), 'YData', quadrotor_atti(2,[1 2]));
-    drawnow;
+set(h1,'Xdata',quadrotor_atti(1,[1 2]), 'Ydata',quadrotor_atti(2,[1 2]));
+% 机臂
+set(h2,'Xdata',quadrotor_atti(1,[1 3]), 'Ydata',quadrotor_atti(2,[1 3]));
+% 左电机
+set(h3,'Xdata',quadrotor_atti(1,[4 2]), 'Ydata',quadrotor_atti(2,[4 2]));
+% 右电机
+set(h4,'Xdata',quadrotor_atti(1,[5 6]), 'Ydata',quadrotor_atti(2,[5 6]));
+% 左螺旋桨
+set(h5,'Xdata',quadrotor_atti(1,[7 8]), 'Ydata',quadrotor_atti(2,[7 8]));
+% 右螺旋桨
+set(line,'Xdata',position(1:i,1),'Ydata',position(1:i,2));
+% 四旋翼轨迹更新
+drawnow;
 end
 end
-
+%% 关键步骤
+1. 状态获取：提取当前时刻的位置 quadrotor_pos 和滚转角 phi。
+2. 旋转矩阵计算：根据滚转角 phi 生成 2D 旋转矩阵 R，用于姿态变换。
+3. 齐次变换矩阵：将旋转和平移组合为齐次变换矩阵 wHb。
+4. 坐标变换：将机体坐标系下的关键点变换到地球坐标系。
+5. 图形更新：通过 set 函数更新图形对象的坐标数据，动态绘制四旋翼姿态和轨迹。
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyOTg0NzMzOSwtOTE4ODczMDA0LDExOD
+eyJoaXN0b3J5IjpbMjA3NDIwMzIyOCwtOTE4ODczMDA0LDExOD
 gyMTkzOSwtNDY4MTQ1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5
 LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLT
 QyMzYzNDU1LC00ODE2NDgyMDddfQ==
