--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -338,16 +338,19 @@ set(line,'Xdata',position(1:i,1),'Ydata',position(1:i,2));
 drawnow;
 end
 end
-%% 关键步骤
+%% 关键步骤:
 1. 状态获取：提取当前时刻的位置 quadrotor_pos 和滚转角 phi。
 2. 旋转矩阵计算：根据滚转角 phi 生成 2D 旋转矩阵 R，用于姿态变换。
 3. 齐次变换矩阵：将旋转和平移组合为齐次变换矩阵 wHb。
 4. 坐标变换：将机体坐标系下的关键点变换到地球坐标系。
-5. 图形更新：通过 set 函数更新图形对象的坐标数据，动态绘制四旋翼姿态和轨迹。
+5. 图形更新：通过`set`函数更新图形对象的坐标数据，动态绘制四旋翼姿态和轨迹。
 ```
+### 六、完整视频展⽰
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA3NDIwMzIyOCwtOTE4ODczMDA0LDExOD
-gyMTkzOSwtNDY4MTQ1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5
-LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLT
-QyMzYzNDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbLTEwMDQ3MjE2NTEsLTkxODg3MzAwNCwxMT
+g4MjE5MzksLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2
+OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC
+00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
 -->
