四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -238,7 +238,7 @@ end
 ---------------------------------------------------------------
 %% 动态调整坐标轴范围
 y_lim_max = ceil(max(position(:,1))) + 2;
-%% 取四旋翼在 y 轴方向的最大位置值，向上取整后加2，确保显示范围比实际数据最大值略大，避
+%% 取四旋翼在 y 轴方向的最大位置值，向上取整后加2，确保显示范围比实际数据最大值略大
 %% 下方减号“-”同理
 y_lim_min = floor(min(position(:,1))) - 2;
 z_lim_max = ceil(max(position(:,2))) + 2;
@@ -341,7 +341,7 @@ end
 %% 关键步骤:
 1. 状态获取：提取当前时刻的位置 quadrotor_pos 和滚转角 phi。
 2. 旋转矩阵计算：根据滚转角 phi 生成 2D 旋转矩阵 R，用于姿态变换。
-3. 齐次变换矩阵：将旋转和平移组合为齐次变换矩阵 wHb。
+3. 齐次变换矩阵：将旋转和平移组合为齐次变换矩阵`wHb`
 4. 坐标变换：将机体坐标系下的关键点变换到地球坐标系。
 5. 图形更新：通过`set`函数更新图形对象的坐标数据，动态绘制四旋翼姿态和轨迹。
 ```
@@ -349,7 +349,7 @@ end
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMDQ3MjE2NTEsLTkxODg3MzAwNCwxMT
+eyJoaXN0b3J5IjpbLTEyMTQ5MDA1NTIsLTkxODg3MzAwNCwxMT
 g4MjE5MzksLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2
 OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC
 00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
