四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -11,9 +11,9 @@
 
 ### 二、状态方程解读
 
-### **状态方程体系**
+### 状态方程体系
 
-### ​**1、系统状态变量**
+### ​1、系统状态变量
 
 $$
 \mathbf{x} = \left\{
@@ -137,5 +137,5 @@ $$
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbMzM4MjA5ODQ3LC00MTg3ODkwMDFdfQ==
 -->
