--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -81,7 +81,7 @@ $$
 
 #### ​**4. 角速度动力学**
 
-由欧拉方程推导（转动惯量 J~x~​ J~y~ J~z~​）：
+由转动定律推导（转动惯量 J~x~​ J~y~ J~z~​）：
 
 
 $$
@@ -137,5 +137,6 @@ $$
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMTE1NzQwMDI0MywxMzkzNjc4MDc0LC00MT
+g3ODkwMDFdfQ==
 -->
