四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -100,6 +100,14 @@ $$
 ```markdown
 常量输入u（时间变量） → 正弦函数模块 → 运算处理 → 四维输出[x_d,y_d,z_d,psi_d] → 轨迹合成(out_desire)
 ```
+```mermaid
+   graph TD
+    A[输入时间变量u] --> |动力学方程计算|C
+    C[quadrotor2_system]
+    C --> |输出状态变量 state|D[反馈至 PID 控制器]
+    D -->|形成闭环| A
+	
+```
 ### 2、核心模块详解
 
 #### 1. 时间基准模块
@@ -137,6 +145,6 @@ $$
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1NzQwMDI0MywxMzkzNjc4MDc0LC00MT
+eyJoaXN0b3J5IjpbLTgzMzM1ODA5NSwxMzkzNjc4MDc0LC00MT
 g3ODkwMDFdfQ==
 -->
