--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -102,9 +102,9 @@ $$
 ```
 ```mermaid
    graph TD
-    A[输入时间变量u] --> |动力学方程计算|C
-    C[quadrotor2_system]
-    C --> |输出状态变量 state|D[反馈至 PID 控制器]
+    A[输入时间变量u] --> B
+    B[正弦函数模块]
+    B --> |运算处理|D[四维输出(x_d,y_d,z_d,psi_d]
     D -->|形成闭环| A
 	
 ```
@@ -145,6 +145,6 @@ $$
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzMzM1ODA5NSwxMzkzNjc4MDc0LC00MT
+eyJoaXN0b3J5IjpbLTQyMzc0MjM0NCwxMzkzNjc4MDc0LC00MT
 g3ODkwMDFdfQ==
 -->
