四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -105,7 +105,7 @@ $$
     A[输入时间变量u] --> B
     B[正弦函数模块]
     B --> |运算处理|D[四维输出 x_d,y_d,z_d,psi_d]
-    D -->轨迹合成 out_desire
+    D -->轨迹合成_out_desire
 	
 ```
 ### 2、核心模块详解
@@ -145,6 +145,6 @@ $$
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5OTc5NzkyNywxMzkzNjc4MDc0LC00MT
+eyJoaXN0b3J5IjpbMjA1NzI0MjY2MiwxMzkzNjc4MDc0LC00MT
 g3ODkwMDFdfQ==
 -->
