--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -97,9 +97,6 @@ $$
 
 ### 1、输入输出路径
 
-```markdown
-常量输入u（时间变量） → 正弦函数模块 → 运算处理 → 四维输出[x_d,y_d,z_d,psi_d] → 轨迹合成(out_desire)
-```
 ```mermaid
    graph TD
     A[输入时间变量u] --> B
@@ -108,6 +105,7 @@ $$
     D -->轨迹合成_out_desire
 	
 ```
+
 ### 2、核心模块详解
 
 #### 1. 时间基准模块
@@ -145,6 +143,6 @@ $$
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA1NzI0MjY2MiwxMzkzNjc4MDc0LC00MT
-g3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxOD
+c4OTAwMV19
 -->
