--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -13,7 +13,7 @@
 
 ### 状态方程体系
 
-### ​1、系统状态变量
+#### ​1、系统状态变量
 
 $$
 \mathbf{x} = \left\{
@@ -141,8 +141,10 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 
+
+
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxOD
-c4OTAwMV19
+eyJoaXN0b3J5IjpbLTE3OTEwODg1MzUsLTE5NTQ5Mjc2LDEzOT
+M2NzgwNzQsLTQxODc4OTAwMV19
 -->
