四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -13,7 +13,7 @@
 
 ### 状态方程体系
 
-#### ​1、系统状态变量
+### ​1、系统状态变量
 
 $$
 \mathbf{x} = \left\{
@@ -141,10 +141,12 @@ $$
 
 ![三维轨迹生成](/imgs/2025-05-04/n5O7dN3UI0TOlHs7.png "三维轨迹生成")
 
+### 四、PID控制器
 
+![输入图片说明](/imgs/2025-05-12/0lHoYvS2cMGYWxZe.png)
 
 > Written with [StackEdit中文版](https://stackedit.cn/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3OTEwODg1MzUsLTE5NTQ5Mjc2LDEzOT
-M2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbMTI4Mzc5NzM3MiwtMTk1NDkyNzYsMTM5Mz
+Y3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
