四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -143,10 +143,12 @@ $$
 
 ### 四、PID控制器
 
-![输入图片说明](/imgs/2025-05-12/0lHoYvS2cMGYWxZe.png)
 
-> Written with [StackEdit中文版](https://stackedit.cn/).
+
+![PID控制器](/imgs/2025-05-12/0lHoYvS2cMGYWxZe.png 'PID控制器')
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI4Mzc5NzM3MiwtMTk1NDkyNzYsMTM5Mz
+eyJoaXN0b3J5IjpbLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5Mz
 Y3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
