四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -145,10 +145,68 @@ $$
 
 ![PID控制器](/imgs/2025-05-12/0lHoYvS2cMGYWxZe.png 'PID控制器')
 
-
-
+### 1、
+位置控制模块​
+​​（1）输入信号​
+​期望位置​：x_d（X轴）、y_d（Y轴）、z_d（Z轴）及对应的变化率​（如 dx_d/dt、dy_d/dt、dz_d/dt）。
+​物理意义​：无人机在三维空间中的目标轨迹（如悬停、8字形飞行等）。
+​​（2）高度控制子模块​
+​功能​：独立控制Z轴高度（z_d），生成垂直方向推力 F。
+​算法​：通常为PID控制器，计算高度误差（z_d - z_actual）并调节推力。
+​输出​：推力 F（需满足电机推力约束，见后续限幅模块）。
+​​（3）水平位置控制（X/Y轴）​​
+​功能​：将X/Y轴的位置误差（x_d - x_actual、y_d - y_actual）转换为期望姿态角（phi_d 滚转角、theta_d 俯仰角）。
+​核心公式​（简化版）：
+markdown
+复制
+phi_d ≈ (y_d - y_actual) * K_p  // 滚转角由Y轴误差生成
+theta_d ≈ (x_d - x_actual) * K_p // 俯仰角由X轴误差生成
+​设计意图​：通过调整无人机姿态，利用旋翼推力分量实现水平位移。
+​2. 姿态控制模块​
+​​（1）输入信号​
+​期望姿态角​：phi_d（滚转）、theta_d（俯仰）、psi_d（偏航）。
+​当前姿态角​：phi、theta、psi（来自传感器反馈）。
+​​（2）姿态角误差计算​
+​功能​：计算姿态角误差（如 phi_d - phi），驱动控制器生成修正力矩。
+​算法​：PID或LQR控制，抑制姿态振荡并快速跟踪期望角。
+​​（3）力矩生成​
+​输出力矩​：Mx（滚转力矩）、My（俯仰力矩）、Mz（偏航力矩）。
+​物理原理​：
+Mx 和 My：通过差动调节前后/左右电机转速实现滚转和俯仰。
+Mz：通过调节对角电机转速差实现偏航（如电机1加速、电机3减速）。
+​3. 限幅模块​
+​​（1）推力限幅​
+​位置​：位置控制模块输出端（推力 F）。
+​作用​：限制推力在电机物理极限范围内（如 F_min ≤ F ≤ F_max）。
+​参数示例​：若电机最大升力为5N，则限幅为 0~20N（四电机总和）。
+​​（2）力矩限幅​
+​位置​：姿态控制模块输出端（力矩 Mx、My、Mz）。
+​作用​：确保力矩不超过电机扭矩和机臂结构强度限制。
+​示例​：Mx_max 由电机扭矩和机臂长度决定（公式：M = F * L）。
+​4. 关键模块交互逻辑​
+​​（1）数据流路径​
+markdown
+复制
+期望位置 (x_d, y_d, z_d) → 位置控制 → [推力F, 姿态角phi_d/theta_d] → 姿态控制 → 力矩Mx/My/Mz → 限幅 → 输出out.input
+​特点​：分层控制结构，位置控制生成高层指令（推力与期望姿态），姿态控制实现底层稳定。
+​​（2）模块协同作用​
+​位置控制​：解决“飞到哪里”的问题，依赖姿态控制实现水平位移。
+​姿态控制​：解决“如何稳定飞行”的问题，快速响应姿态误差。
+​限幅模块​：确保控制指令符合物理可行性，防止电机饱和或结构损坏。
+​5. 核心设计思想​
+​​（1）分层控制架构​
+​优势​：解耦位置与姿态控制，降低系统复杂度。
+​典型应用​：
+定高飞行时，z_d固定，phi_d/theta_d由遥控器或轨迹生成器输入。
+轨迹跟踪时，x_d/y_d动态变化，位置控制实时解算姿态角需求。
+​​（2）姿态角生成逻辑​
+​X/Y轴位置误差→姿态角​：通过调整滚转/俯仰角，将旋翼推力分解为水平力，实现平移运动。
+​示例​：若需向右移动（增大 x_d），位置控制增大 theta_d（俯仰角），无人机前倾，推力水平分量驱动右移。
+​​（3）限幅的必要性​
+​电机保护​：防止指令超出电机最大转速或扭矩。
+​稳定性保障​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NDM5NzUwNCwtOTA5NzY2NTMyLC0xOT
-U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTE2NjIzMjQ4MzcsLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
