--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -150,9 +150,9 @@ $$
 #### ​（1）输入信号​
 
 -   ​**期望位置**​：`x_d`（X轴）、`y_d`（Y轴）、`z_d`（Z轴）及对应的**变化率**​（如 `dx_d/dt`、`dy_d/dt`、`dz_d/dt`）。
--   ​**物理意义**​：无人机在三维空间中的目标轨迹（如悬停、8字形飞行等）。
+-   ​**物理意义**​：无人机在三维空间中的目标轨迹
 
-#### ​**​（2）高度控制子模块**​
+#### ​ (2）高度控制子模块​
 
 -   ​**功能**​：独立控制Z轴高度（`z_d`），生成垂直方向推力 `F`。
 -   ​**算法**​：通常为PID控制器，计算高度误差（`z_d - z_actual`）并调节推力。
@@ -255,6 +255,6 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDgxNDg3NTgsLTkwOTc2NjUzMiwtMT
+eyJoaXN0b3J5IjpbLTE0NjM4NjUxODksLTkwOTc2NjUzMiwtMT
 k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
