四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -154,8 +154,8 @@ $$
 
 #### ​ (2）高度控制子模块​
 
--   ​**功能**​：独立控制Z轴高度（`z_d`），经`限幅`模块后生成垂直方向推力 `F`。
--   ​**算法**​：通常为PID控制器，计算高度误差（`z_d - z_actual`）并调节推力。
+-   ​**功能**​：独立控制Z轴高度（`z_d`），生成垂直方向推力 `F`。
+-   ​**算法**​：通常为PID控制算法，计算高度误差（`z_d - z_actual`）并调节推力。
 -   ​**输出**​：推力 `F`（需满足电机推力约束，见后续限幅模块）。
 
 #### ​**​（3）水平位置控制（X/Y轴）​**​
@@ -255,6 +255,6 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxMzY4Mzc0MSwtOTA5NzY2NTMyLC0xOT
+eyJoaXN0b3J5IjpbMTY1OTc4OTg3OSwtOTA5NzY2NTMyLC0xOT
 U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
