四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -150,7 +150,7 @@ $$
 #### ​（1）输入信号​
 
 -   ​**期望位置**​：`x_d`（X轴）、`y_d`（Y轴）、`z_d`（Z轴）及对应的**变化率**​（如 `dx_d/dt`、`dy_d/dt`、`dz_d/dt`）。
--   ​**物理意义**​：无人机在三维空间中的目标轨迹
+-   ​**物理意义**​：无人机在三维空间中的目标轨迹（）
 
 #### ​ (2）高度控制子模块​
 
@@ -255,6 +255,6 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY1OTc4OTg3OSwtOTA5NzY2NTMyLC0xOT
+eyJoaXN0b3J5IjpbLTM0NzQ2OTAzNCwtOTA5NzY2NTMyLC0xOT
 U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
