--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -150,12 +150,12 @@ $$
 #### ​（1）输入信号​
 
 -   ​**期望位置**​：`x_d`（X轴）、`y_d`（Y轴）、`z_d`（Z轴）及对应的**变化率**​（如 `dx_d/dt`、`dy_d/dt`、`dz_d/dt`）。
--   ​**物理意义**​：无人机在三维空间中的目标轨迹（）
+-   ​**物理意义**​：无人机在三维空间中的目标轨迹（8字形）
 
 #### ​ (2）高度控制子模块​
 
 -   ​**功能**​：独立控制Z轴高度（`z_d`），生成垂直方向推力 `F`。
--   ​**算法**​：通常为PID控制算法，计算高度误差（`z_d - z_actual`）并调节推力。
+-   ​**算法**​：通常为PID控制算法，计算高度误差（`error z = z_d - z_actual`）并调节推力。
 -   ​**输出**​：推力 `F`（需满足电机推力约束，见后续限幅模块）。
 
 #### ​**​（3）水平位置控制（X/Y轴）​**​
@@ -255,6 +255,6 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM0NzQ2OTAzNCwtOTA5NzY2NTMyLC0xOT
-U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTE5NzIxOTMxMzAsLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
