四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -160,8 +160,8 @@ $$
 
 #### ​​（3）水平位置控制（X/Y轴）​​
 
--   ​**功能**​：将X/Y轴的位置误差（`x_d - x_actual`、`y_d - y_actual`）转换为期望姿态角（`phi_d` 滚转角、`theta_d` 俯仰角）。
--   ​**核心公式**​（简化版）：
+-   ​**功能**​：将X/Y轴的位置误差（`x_d - x_actual`、`y_d - y_actual`）经`theta phi 期望值计算`函数转换为期望姿态角（`phi_d` 滚转角、`theta_d` 俯仰角）。
+-   ​**函数核心公式**​（简化版）：
     
     markdown
     
@@ -255,6 +255,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NT
-Q5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOT
+c2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAx
+XX0=
 -->
