--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -163,10 +163,6 @@ $$
 -   ​**功能**​：将X/Y轴的位置误差（`x_d - x_actual`、`y_d - y_actual`）经`theta phi 期望值计算`函数转换为期望姿态角（`phi_d` 滚转角、`theta_d` 俯仰角）。
 -   ​**函数核心公式**​（简化版）：
     
-    markdown
-    
-    复制
-    
     ```markdown
     phi_d ≈ (y_d - y_actual) * K_p  // 滚转角由Y轴误差生成
     theta_d ≈ (x_d - x_actual) * K_p // 俯仰角由X轴误差生成
@@ -255,7 +251,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOT
-c2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAx
-XX0=
+eyJoaXN0b3J5IjpbNDcyNjIyNzI3LC0yMzEzMjUzMDUsODY4Mz
+MzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQs
+LTQxODc4OTAwMV19
 -->
