--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -168,7 +168,7 @@ $$
     theta_d ≈ (x_d - x_actual) * K_p // 俯仰角由X轴误差生成
     ```
     
--   ​**设计意图**​：通过调整无人机姿态，利用旋翼推力分量实现水平位移。
+-   ​**设计意图**​：通过调整无人机姿态，利用旋翼推力分量实现水平位移。通过调整无人机姿态倾斜产生水平推力分量，进而实现位置跟踪。
 
 ----------
 
@@ -251,7 +251,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDcyNjIyNzI3LC0yMzEzMjUzMDUsODY4Mz
-MzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQs
-LTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTEyMDg3NzE2OTUsLTIzMTMyNTMwNSw4Nj
+gzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3
+NCwtNDE4Nzg5MDAxXX0=
 -->
