四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -181,8 +181,8 @@ $$
 
 #### ​**​（2）姿态角误差计算**​
 
--   ​**功能**​：计算姿态角误差（如 `phi_d - phi`），驱动控制器生成修正力矩。
--   ​**算法**​：PID或LQR控制，抑制姿态振荡并快速跟踪期望角。
+-   ​**功能**​：计算姿态角误差（如 `phi_d - phi`），驱动PID控制器生成力矩`M`
+-   ​**算法**​：PID控制算法，抑制姿态振荡并快速跟踪期望角。
 
 #### ​**​（3）力矩生成**​
 
@@ -251,7 +251,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg2NTQ4MjExOCwtMjMxMzI1MzA1LDg2OD
+eyJoaXN0b3J5IjpbMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2OD
 MzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0
 LC00MTg3ODkwMDFdfQ==
 -->
