四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -197,8 +197,8 @@ $$
 
 #### ​**​（1）推力限幅**​
 
--   ​**位置**​：位置控制模块输出端（推力 `F`）。
--   ​**作用**​：限制推力在电机物理极限范围内（如 `F_min ≤ F ≤ F_max`）。
+-   ​**位置**​：位置控制模块（高度控制）输出端（推力 `F`）。
+-   ​**作用**​：限制推力在电机物理极限范围内（ F_min ≤ F ≤ F_max）。
 -   ​**参数示例**​：若电机最大升力为5N，则限幅为 `0~20N`（四电机总和）。
 
 #### ​**​（2）力矩限幅**​
@@ -251,7 +251,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2OD
-MzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0
-LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMT
+MyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYs
+MTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
