四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -220,7 +220,14 @@ markdown
 ```markdown
 期望位置 (x_d, y_d, z_d) → 位置控制 → [推力F, 姿态角phi_d/theta_d] → 姿态控制 → 力矩Mx/My/Mz → 限幅 → 输出out.input
 ```
-
+```mermaid
+   graph TD
+    A[输入期望位置 x_d, y_d, z_d] --> B
+    B[正弦函数模块]
+    B --> |运算处理|D[四维输出 x_d,y_d,z_d,psi_d]
+    D -->轨迹合成_out_desire
+	
+```
 -   ​**特点**​：分层控制结构，位置控制生成高层指令（推力与期望姿态），姿态控制实现底层稳定。
 
 #### ​**​（2）模块协同作用**​
@@ -251,7 +258,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMT
-MyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYs
-MTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbLTEyMjQ1NDk5NjIsMzU1MDA1NDU4LDE0NT
+g0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUz
+MiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
