四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -222,9 +222,9 @@ markdown
 ```
 ```mermaid
    graph TD
-    A[输入期望位置 x_d, y_d, z_d] --> B
-    B[正弦函数模块]
-    B --> |运算处理|D[四维输出 x_d,y_d,z_d,psi_d]
+    A[输入期望位置 x_d, y_d, z_d] --> |位置控制|C
+    C[推力F, 姿态角phi_d/theta_d]
+    C --> |姿态控制|D[四维输出 x_d,y_d,z_d,psi_d]
     D -->轨迹合成_out_desire
 	
 ```
@@ -258,7 +258,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMjQ1NDk5NjIsMzU1MDA1NDU4LDE0NT
-g0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUz
-MiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbODQ1MTc3ODQwLDM1NTAwNTQ1OCwxNDU4ND
+czMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIs
+LTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
 -->
