四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -224,8 +224,9 @@ markdown
    graph TD
     A[输入期望位置 x_d, y_d, z_d] --> |位置控制|C
     C[推力F, 姿态角phi_d/theta_d]
-    C --> |姿态控制|D[四维输出 x_d,y_d,z_d,psi_d]
-    D -->轨迹合成_out_desire
+    C --> |姿态控制|E
+    E[力矩Mx/My/Mz]
+    E --> |位置控制|C
 	
 ```
 -   ​**特点**​：分层控制结构，位置控制生成高层指令（推力与期望姿态），姿态控制实现底层稳定。
@@ -258,7 +259,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODQ1MTc3ODQwLDM1NTAwNTQ1OCwxNDU4ND
-czMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIs
-LTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbMTI5OTMyMDkzNiwzNTUwMDU0NTgsMTQ1OD
+Q3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMy
+LC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
