--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -226,8 +226,8 @@ markdown
     C[推力F, 姿态角phi_d/theta_d]
     C --> |姿态控制|E
     E[力矩Mx/My/Mz]
-    E --> |位置控制|C
-	
+    E --> |限幅|G
+	G[输出 out.input]
 ```
 -   ​**特点**​：分层控制结构，位置控制生成高层指令（推力与期望姿态），姿态控制实现底层稳定。
 
@@ -259,7 +259,7 @@ markdown
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5OTMyMDkzNiwzNTUwMDU0NTgsMTQ1OD
+eyJoaXN0b3J5IjpbMTg4NTYwODcyMywzNTUwMDU0NTgsMTQ1OD
 Q3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMy
 LC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
