四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -223,7 +223,7 @@ $$
 	G[输出 out.input]
 ```
 
--   ​**特点**​：分层控制结构，位置控制生成高层指令（推力与期望姿态），姿态控制实现底层稳定。
+-   ​**特点**​：内外环控制结构，外环位置控制环生成内环指令（推力与期望姿态），内环姿态控制环实现外环稳定与期望跟踪。
 
 #### ​**​（2）模块协同作用**​
 
@@ -253,7 +253,8 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1OD
-Q3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMy
-LC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNT
+UwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3
+OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MT
+g3ODkwMDFdfQ==
 -->
