四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -228,7 +228,7 @@ $$
 #### ​**​（2）模块协同作用**​
 
 -   ​**位置控制**​：解决“飞到哪里”的问题，依赖姿态控制实现水平位移。
--   ​**姿态控制**​：解决“如何稳定飞行”的问题，快速响应姿态误差。
+-   ​**姿态控制**​：解决“如何稳定飞行”的问题，快速响应位置误差。
 -   ​**限幅模块**​：确保控制指令符合物理可行性，防止电机饱和或结构损坏。
 
 ----------
@@ -253,8 +253,8 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNT
-UwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3
-OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MT
-g3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOT
+kyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUz
+MDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOT
+M2NzgwNzQsLTQxODc4OTAwMV19
 -->
