四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -145,7 +145,7 @@ $$
 
 ![PID控制器](/imgs/2025-05-12/0lHoYvS2cMGYWxZe.png 'PID控制器')
 
-### 1、 位置控制模块​
+###  1、 位置控制模块​
 
 #### ​（1）输入信号​
 
@@ -172,7 +172,7 @@ $$
 
 ----------
 
-### ​2、 姿态控制模块​
+###  ​2、 姿态控制模块​
 
 #### ​**​（1）输入信号**​
 
@@ -193,7 +193,7 @@ $$
 
 ----------
 
-### ​**3. 限幅模块**​
+### ​ 3、限幅模块​
 
 #### ​**​（1）推力限幅**​
 
@@ -209,7 +209,7 @@ $$
 
 ----------
 
-### ​**4. 关键模块交互逻辑**​
+### ​ 4、关键模块交互逻辑​
 
 #### ​**​（1）数据流路径**​
 
@@ -233,13 +233,13 @@ $$
 
 ----------
 
-### ​**5. 核心设计思想**​
+### ​ 5、核心设计思想​
 
-#### ​**​（1）分层控制架构**​
+#### ​**​（1）内外环控制架构**​
 
 -   ​**优势**​：解耦位置与姿态控制，降低系统复杂度。
 -   ​**典型应用**​：
-    -   定高飞行时，`z_d`固定，`phi_d`/`theta_d`由遥控器或轨迹生成器输入。
+    -   定高飞行时，`z_d`固定，`phi_d`/`theta_d`由轨迹生成器输入。
     -   轨迹跟踪时，`x_d`/`y_d`动态变化，位置控制实时解算姿态角需求。
 
 #### ​**​（2）姿态角生成逻辑**​
@@ -253,8 +253,8 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOT
-kyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUz
-MDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOT
-M2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTY0Nzg4MTcyMCwxMjExOTc5MDE3LC0xNT
+gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
+OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
