四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -170,6 +170,7 @@ $$
     
 -   ​**设计意图**​：通过调整无人机姿态倾斜产生水平推力分量，利用其实现水平位移位置跟踪。
 
+
 ----------
 
 ###  ​2、 姿态控制模块​
@@ -233,7 +234,7 @@ $$
 
 ----------
 
-### ​ 5、核心设计思想​
+### ​ 5、总结  核心设计思想​
 
 #### ​**​（1）内外环控制架构**​
 
@@ -253,7 +254,7 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY0Nzg4MTcyMCwxMjExOTc5MDE3LC0xNT
+eyJoaXN0b3J5IjpbLTQwOTY2MDA2MiwxMjExOTc5MDE3LC0xNT
 gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
 OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
 k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
