四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -158,9 +158,9 @@ $$
 -   ​**算法**​：通常为PID控制算法，计算高度误差（`error z = z_d - z_actual`）并调节推力。
 -   ​**输出**​：推力 `F`（需满足电机推力约束，见后续限幅模块）。
 
-（补充）
+#### （补充）
 
-
+![输入图片说明](/imgs/2025-05-12/oA9cd9wUxtPWabsr.png)
 
 #### ​​（3）水平位置控制（X/Y轴）​​
 
@@ -178,17 +178,17 @@ $$
 
 ###  ​2、 姿态控制模块​
 
-#### ​**​（1）输入信号**​
+#### （1）输入信号​
 
 -   ​**期望姿态角**​：`phi_d`（滚转）、`theta_d`（俯仰）、`psi_d`（偏航）。
 -   ​**当前姿态角**​：`phi`、`theta`、`psi`（来自传感器反馈）。
 
-#### ​**​（2）姿态角误差计算**​
+#### ​（2）姿态角误差计算
 
 -   ​**功能**​：计算姿态角误差（如 `phi_d - phi`），驱动PID控制器生成力矩`M`
 -   ​**算法**​：PID控制算法，抑制姿态振荡并快速跟踪期望角。
 
-#### ​**​（3）力矩生成**​
+#### ​（3）力矩生成​
 
 -   ​**输出力矩**​：`Mx`（滚转力矩）、`My`（俯仰力矩）、`Mz`（偏航力矩）。
 -   ​**物理原理**​：
@@ -199,13 +199,13 @@ $$
 
 ### ​ 3、限幅模块​
 
-#### ​**​（1）推力限幅**​
+#### ​（1）推力限幅
 
 -   ​**位置**​：位置控制模块（高度控制）输出端（推力 `F`）。
 -   ​**作用**​：限制推力在电机物理极限范围内（ F_min ≤ F ≤ F_max）。
 -   ​**参数示例**​：若电机最大升力为5N，则限幅为 `0~20N`（四电机总和）。
 
-#### ​**​（2）力矩限幅**​
+#### （2）力矩限幅​
 
 -   ​**位置**​：姿态控制模块输出端（力矩 `Mx`、`My`、`Mz`）。
 -   ​**作用**​：确保力矩不超过电机扭矩和机臂结构强度限制。
@@ -215,7 +215,7 @@ $$
 
 ### ​ 4、关键模块交互逻辑​
 
-#### ​**​（1）数据流路径**​
+#### ​（1）数据流路径
 
 ```mermaid
    graph TD
@@ -229,7 +229,7 @@ $$
 
 -   ​**特点**​：内外环控制结构，外环位置控制环生成内环指令（推力与期望姿态），内环姿态控制环实现外环稳定与期望跟踪。
 
-#### ​**​（2）模块协同作用**​
+#### ​**（2）模块协同作用*
 
 -   ​**位置控制**​：解决“飞到哪里”的问题，依赖姿态控制实现水平位移。
 -   ​**姿态控制**​：解决“如何稳定飞行”的问题，快速响应位置误差。
@@ -257,7 +257,7 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTIwMDUwMjY1LDEyMTE5NzkwMTcsLTE1OD
+eyJoaXN0b3J5IjpbMTcxNzM2MDE2LDEyMTE5NzkwMTcsLTE1OD
 E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
 OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
 U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
