四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -158,9 +158,9 @@ $$
 -   ​**算法**​：通常为PID控制算法，计算高度误差（`error z = z_d - z_actual`）并调节推力。
 -   ​**输出**​：推力 `F`（需满足电机推力约束，见后续限幅模块）。
 
-#### （补充）
+#### （补充：高度控制）
 
-![输入图片说明](/imgs/2025-05-12/oA9cd9wUxtPWabsr.png)
+![输入图片说明](/imgs/2025-05-12/LLhcTqulHOfmXJya.png)
 
 #### ​​（3）水平位置控制（X/Y轴）​​
 
@@ -229,7 +229,7 @@ $$
 
 -   ​**特点**​：内外环控制结构，外环位置控制环生成内环指令（推力与期望姿态），内环姿态控制环实现外环稳定与期望跟踪。
 
-#### ​**（2）模块协同作用*
+#### ​（2）模块协同作用*
 
 -   ​**位置控制**​：解决“飞到哪里”的问题，依赖姿态控制实现水平位移。
 -   ​**姿态控制**​：解决“如何稳定飞行”的问题，快速响应位置误差。
@@ -239,25 +239,25 @@ $$
 
 ### ​ 5、总结  核心设计思想​
 
-#### ​**​（1）内外环控制架构**​
+#### ​（1）内外环控制架构
 
 -   ​**优势**​：解耦位置与姿态控制，降低系统复杂度。
 -   ​**典型应用**​：
     -   定高飞行时，`z_d`固定，`phi_d`/`theta_d`由轨迹生成器输入。
     -   轨迹跟踪时，`x_d`/`y_d`动态变化，位置控制实时解算姿态角需求。
 
-#### ​**​（2）姿态角生成逻辑**​
+#### ​​（2）姿态角生成逻辑
 
 -   ​**X/Y轴位置误差→姿态角**​：通过调整滚转/俯仰角，将旋翼推力分解为水平力，实现平移运动。
 -   ​**示例**​：若需向右移动（增大 `x_d`），位置控制增大 `theta_d`（俯仰角），无人机前倾，推力水平分量驱动右移。
 
-#### ​**​（3）限幅的必要性**​
+#### ​（3）限幅的必要性​
 
 -   ​**电机保护**​：防止指令超出电机最大转速或扭矩。
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxNzM2MDE2LDEyMTE5NzkwMTcsLTE1OD
+eyJoaXN0b3J5IjpbODA2OTc0NDkyLDEyMTE5NzkwMTcsLTE1OD
 E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
 OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
 U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
