四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -158,9 +158,10 @@ $$
 -   ​**算法**​：通常为PID控制算法，计算高度误差（`error z = z_d - z_actual`）并调节推力。
 -   ​**输出**​：推力 `F`（需满足电机推力约束，见后续限幅模块）。
 
-#### （补充：高度控制）
+#### （补充：高度控制子模块）
 
-![输入图片说明](/imgs/2025-05-12/LLhcTqulHOfmXJya.png)
+![高度控制子模块](/imgs/2025-05-12/LLhcTqulHOfmXJya.png "高度控制子模块")
+- 说明：此处的QuadrotorState1
 
 #### ​​（3）水平位置控制（X/Y轴）​​
 
@@ -257,8 +258,8 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODA2OTc0NDkyLDEyMTE5NzkwMTcsLTE1OD
-E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
-OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
-U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTU5MjU2MDU5NSwxMjExOTc5MDE3LC0xNT
+gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
+OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
