--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -256,9 +256,11 @@ $$
 
 -   ​**电机保护**​：防止指令超出电机最大转速或扭矩。
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
+### 五、三维四旋翼动态系统
 
+详细讲解一下这张图中的模块的含义以及各部分在其中的作用详细讲解一下这张图中的模块的含义以及各部分在其中的作用
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM2ODAxOTA5LDEyMTE5NzkwMTcsLTE1OD
+eyJoaXN0b3J5IjpbODA2MDk0NTY3LDEyMTE5NzkwMTcsLTE1OD
 E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
 OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
 U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
