四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -258,10 +258,10 @@ $$
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 ### 五、三维四旋翼动态系统
 
-![三维四旋翼动态系统](/imgs/2025-05-12/JVphHuVqSuXr8XaM.png “三维四旋翼动态系统")
+![三维四旋翼动态系统](/imgs/2025-05-12/JVphHuVqSuXr8XaM.png '三维四旋翼动态系统')
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjIxNDEwMjc2LDEyMTE5NzkwMTcsLTE1OD
-E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
-OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
-U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
+gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
+OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
