四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -259,9 +259,160 @@ $$
 ### 五、三维四旋翼动态系统
 
 ![三维四旋翼动态系统](/imgs/2025-05-12/JVphHuVqSuXr8XaM.png '三维四旋翼动态系统')
+
+### **1. 模型整体架构**​
+
+#### ​**​(1) 模型名称与层级结构**​
+
+-   ​**模型路径**​：`quadrotor3_8shape/三维四旋翼动态系统`
+    -   ​**顶层模型**​：包含输入/输出接口、核心动力学模块（`quadrotor3_system`）及信号监控模块。
+    -   ​**子模块**​：可能包含四旋翼动力学方程、PID控制器、姿态解算等细节（需展开查看内部）。
+
+#### ​**​(2) 主要模块分布**​
+
+-   ​**左侧输入**​：推力 `F` 和力矩 `M` 的输入信号（标号 `1`、`2`）。
+-   ​**中央核心**​：`quadrotor3_system`（四旋翼动力学模型）。
+-   ​**右侧输出**​：
+    -   `QuadrotorState send state`：发送无人机完整状态（位置、姿态、速度等）。
+    -   `state` 和 `out_state`：状态信号输出接口，可能用于数据记录或外部控制。
+
+----------
+
+### ​**2. 输入模块解析**​
+
+#### ​**​(1) 推力输入 `F`（标号 `1`）​**​
+
+-   ​**作用**​：输入四旋翼的总垂直推力，通常由高度控制模块（如PID）生成。
+-   ​**物理意义**​：控制无人机的升降运动（Z轴方向）。
+-   ​**信号流向**​：`F` → `quadrotor3_system` → 影响无人机垂直加速度。
+
+#### ​**​(2) 力矩输入 `M`（标号 `2`）​**​
+
+-   ​**作用**​：输入三轴力矩（滚转、俯仰、偏航），通常由姿态控制器生成。
+-   ​**物理意义**​：
+    -   ​**滚转力矩（M_phi）​**​：控制无人机绕X轴旋转（左右倾斜）。
+    -   ​**俯仰力矩（M_theta）​**​：控制无人机绕Y轴旋转（前后倾斜）。
+    -   ​**偏航力矩（M_psi）​**​：控制无人机绕Z轴旋转（左右转向）。
+-   ​**信号流向**​：`M` → `quadrotor3_system` → 影响无人机角加速度。
+
+----------
+
+### ​**3. 核心模块 `quadrotor3_system` 详解**​
+
+#### ​**​(1) 功能概述**​
+
+-   ​**动力学模型**​：基于牛顿-欧拉方程，模拟四旋翼的六自由度运动（3个平移自由度 + 3个旋转自由度）。
+-   ​**输入输出关系**​：
+    -   ​**输入**​：推力 `F`、力矩 `M`。
+    -   ​**输出**​：
+        -   ​**位置**​：`x, y, z`（三维空间坐标）。
+        -   ​**速度**​：`dx, dy, dz`（三轴线速度）。
+        -   ​**姿态角**​：`phi`（滚转）、`theta`（俯仰）、`psi`（偏航）。
+        -   ​**角速度**​：`p, q, r`（绕X/Y/Z轴的角速度）。
+
+#### ​**​(2) 内部逻辑（假设展开后）​**​
+
+1.  ​**推力分配**​：将总推力 `F` 分配到四个电机（需展开查看电机模型）。
+2.  ​**力矩计算**​：根据电机转速差生成三轴力矩 `M`。
+3.  ​**运动方程**​：
+    -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）。
+    -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）。
+4.  ​**姿态解算**​：通过角速度积分或四元数更新计算 `phi, theta, psi`。
+
+----------
+
+### ​**4. 输出模块解析**​
+
+#### ​**​(1) `QuadrotorState send state`**​
+
+-   ​**作用**​：打包输出无人机的完整状态信息，供其他子系统（如控制器、可视化模块）使用。
+-   ​**输出信号**​：
+    -   ​**位置**​：`x, y, z`（可能包含世界坐标系或机体坐标系数据）。
+    -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）。
+    -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）。
+
+#### ​**​(2) `state` 和 `out_state`**​
+
+-   ​**作用**​：将关键状态信号单独输出，用于实时监控或记录。
+-   ​**典型用途**​：
+    -   连接示波器（如模型右侧的 `查看结果` 模块）观察动态响应。
+    -   导出数据到MATLAB工作空间进行后处理。
+
+----------
+
+### ​**5. 信号标签与连接逻辑**​
+
+#### ​**​(1) 输入信号线**​
+
+-   ​**F**​：总推力输入，直接作用于四旋翼的垂直运动。
+-   ​**M**​：三轴力矩输入，驱动无人机的滚转、俯仰、偏航运动。
+
+#### ​**​(2) 输出信号线**​
+
+-   ​**x, y, z**​：无人机在三维空间中的位置坐标。
+-   ​**dx, dy, dz**​：三轴线速度（位置的一阶导数）。
+-   ​**phi, theta, psi**​：滚转、俯仰、偏航角（单位：弧度）。
+-   ​**p, q, r**​：绕X/Y/Z轴的角速度（单位：rad/s）。
+
+#### ​**​(3) 反馈回路**​
+
+-   ​**状态反馈**​：输出信号（如姿态角、位置）可能通过外部控制器（如PID模块）生成新的 `F` 和 `M`，形成闭环控制。
+-   ​**示例**​：
+    
+    markdown
+    
+    复制
+    
+    ```markdown
+    z（实际高度） → PID控制器 → F（推力修正） → quadrotor3_system → z（更新高度）
+    ```
+    
+
+----------
+
+### ​**6. 工具栏与仿真配置**​
+
+#### ​**​(1) 仿真控制栏**​
+
+-   ​**停止时间**​：设定仿真总时长（例如 `停止时间=150%` 可能表示加速仿真）。
+-   ​**运行/步退**​：控制仿真流程，支持单步调试。
+-   ​**信号查看器**​：通过 `添加查看器` 或 `信号表` 实时监控信号数值。
+
+#### ​**​(2) 模块参数配置**​
+
+-   ​**PID控制器模块**​：双击可设置比例、积分、微分增益（如用户之前问题中的 `K_p=0.2, K_i=0.2, K_d=1`）。
+-   ​**动力学模块**​：可调整四旋翼质量 `m`、转动惯量 `I`、重力 `g` 等物理参数。
+
+----------
+
+### ​**7. 系统运行流程总结**​
+
+1.  ​**输入生成**​：
+    -   外部控制器（如PID）或手动输入生成推力 `F` 和力矩 `M`。
+2.  ​**动力学计算**​：
+    -   `quadrotor3_system` 根据输入计算无人机的位置、姿态、速度等状态。
+3.  ​**状态反馈**​：
+    -   输出信号 `x, y, z, phi, theta, psi` 等反馈给控制器，形成闭环。
+4.  ​**可视化与调试**​：
+    -   通过示波器或信号表观察误差收敛性、稳定性等性能指标。
+
+----------
+
+### ​**8. 典型应用场景**​
+
+1.  ​**悬停控制**​：通过PID调节 `F` 保持高度，调节 `M` 维持姿态稳定。
+2.  ​**轨迹跟踪**​：给定 `x_d(t), y_d(t), z_d(t)`，通过位置-姿态耦合控制实现三维路径跟踪。
+3.  ​**抗风扰测试**​：注入外部力干扰，验证控制器的鲁棒性。
+
+----------
+
+### ​**总结**​
+
+该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
-gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
-OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
-k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMT
+k3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1
+OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MD
+k3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAw
+MV19
 -->
