四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -265,10 +265,10 @@ $$
 #### ​(1) 模型名称与层级结构​
 
 -   ​**模型路径**​：`quadrotor3_8shape/三维四旋翼动态系统`
-    -   ​**顶层模型**​：包含输入/输出接口、核心动力学模块（`quadrotor3_system`）及信号监控模块。
-    -   ​**子模块**​：包含四旋翼动力学方程、PID控制器、姿态解算等细节
+    -   ​**顶层模型**​：包含输入/输出接口、核心动力学模块（`quadrotor3_system`）及信号传递模块
+    -   ​**子模块**​：包含四旋翼动力学方程、PID控制器、姿态解算、信号传递等细节
 
-#### ​**​(2) 主要模块分布**​
+#### ​(2) 主要模块分布​
 
 -   ​**左侧输入**​：推力 `F` 和力矩 `M` 的输入信号（标号 `1`、`2`）。
 -   ​**中央核心**​：`quadrotor3_system`（四旋翼动力学模型）。
@@ -410,9 +410,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTkxNjM0ODYsMTA0Mzg0MzI0LDEyOT
-Y5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTcz
-NjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsOD
-Y4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2Nzgw
-NzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbMTAzNTc2MjE2MiwxMDQzODQzMjQsMTI5Nj
+k1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2
+NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4Nj
+gzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3
+NCwtNDE4Nzg5MDAxXX0=
 -->
