--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -270,10 +270,10 @@ $$
 
 #### ​(2) 主要模块分布​
 
--   ​**左侧输入**​：推力 `F` 和力矩 `M` 的输入信号（标号 `1`、`2`）。
+-   ​**左侧输入**​：推力 `F` 和力矩 `M` 的输入信号
 -   ​**中央核心**​：`quadrotor3_system`（四旋翼动力学模型）。
 -   ​**右侧输出**​：
-    -   `QuadrotorState send state`：发送无人机完整状态（位置、姿态、速度等）。
+    -   `QuadrotorState (send state)`：发送无人机完整状态（位置、姿态、速度等）。
     -   `state` 和 `out_state`：状态信号输出接口，可能用于数据记录或外部控制。
 
 ----------
@@ -410,9 +410,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAzNTc2MjE2MiwxMDQzODQzMjQsMTI5Nj
-k1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2
-NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4Nj
-gzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3
-NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbLTE5OTMwOTc4ODIsMTA0Mzg0MzI0LDEyOT
+Y5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTcz
+NjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsOD
+Y4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2Nzgw
+NzQsLTQxODc4OTAwMV19
 -->
