四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -270,7 +270,7 @@ $$
 
 #### ​(2) 主要模块分布​
 
--   ​**左侧输入**​：由PID控制器得到的推力 `F` 和力矩 `M` 
+-   ​**左侧输入**​：由PID控制器得到的输入信号 推力 `F` 和力矩 `M` 
 -   ​**中央核心**​：`quadrotor3_system`（四旋翼动力学模型）。
 -   ​**右侧输出**​：
     -   `QuadrotorState (send state)`：发送无人机完整状态（位置、姿态、速度等）。
@@ -278,11 +278,11 @@ $$
 
 ----------
 
-### ​**2. 输入模块解析**​
+### ​2. 输入模块解析
 
-#### ​**​(1) 推力输入 `F`（标号 `1`）​**​
+#### ​​(1) 推力输入 `F`​
 
--   ​**作用**​：输入四旋翼的总垂直推力，通常由高度控制模块（如PID）生成。
+-   ​**作用**​：输入四旋翼的总垂直推力，通常由高度控制模块（PID）生成。
 -   ​**物理意义**​：控制无人机的升降运动（Z轴方向）。
 -   ​**信号流向**​：`F` → `quadrotor3_system` → 影响无人机垂直加速度。
 
@@ -410,7 +410,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTY1NjU5NzU4LDEwNDM4NDMyNCwxMjk2OT
+eyJoaXN0b3J5IjpbMzQ2MDU4NDk2LDEwNDM4NDMyNCwxMjk2OT
 U3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3
 MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2OD
 MzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0
