四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -282,13 +282,13 @@ $$
 
 #### ​​(1) 推力输入 `F`​
 
--   ​**作用**​：输入四旋翼的总垂直推力，通常由高度控制模块（PID）生成。
--   ​**物理意义**​：控制无人机的升降运动（Z轴方向）。
--   ​**信号流向**​：`F` → `quadrotor3_system` → 影响无人机垂直加速度。
+-   ​**作用**​：输入四旋翼的总垂直推力，通常由高度控制模块经PID算法计算生成
+-   ​**物理意义**​：控制无人机的升降运动（Z轴方向）
+-   ​**信号流向**​：`F` → `quadrotor3_system` → 影响无人机垂直加速度
 
-#### ​**​(2) 力矩输入 `M`（标号 `2`）​**​
+#### ​​(2) 力矩输入 `M`​
 
--   ​**作用**​：输入三轴力矩（滚转、俯仰、偏航），通常由姿态控制器生成。
+-   ​**作用**​：输入三轴力矩（滚转、俯仰、偏航），通常由姿态环控制器生成
 -   ​**物理意义**​：
     -   ​**滚转力矩（M_phi）​**​：控制无人机绕X轴旋转（左右倾斜）。
     -   ​**俯仰力矩（M_theta）​**​：控制无人机绕Y轴旋转（前后倾斜）。
@@ -410,9 +410,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQ2MDU4NDk2LDEwNDM4NDMyNCwxMjk2OT
-U3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3
-MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2OD
-MzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0
-LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbMTY5NjY1MzYyOSwxMDQzODQzMjQsMTI5Nj
+k1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2
+NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4Nj
+gzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3
+NCwtNDE4Nzg5MDAxXX0=
 -->
