四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -290,10 +290,10 @@ $$
 
 -   ​**作用**​：输入三轴力矩（滚转、俯仰、偏航），通常由姿态环控制器生成
 -   ​**物理意义**​：
-    -   ​**滚转力矩（M_phi）​**​：控制无人机绕X轴旋转（左右倾斜）。
-    -   ​**俯仰力矩（M_theta）​**​：控制无人机绕Y轴旋转（前后倾斜）。
-    -   ​**偏航力矩（M_psi）​**​：控制无人机绕Z轴旋转（左右转向）。
--   ​**信号流向**​：`M` → `quadrotor3_system` → 影响无人机角加速度。
+    -   ​**滚转力矩（M_phi）​**​：控制无人机绕X轴旋转（左右倾斜）
+    -   ​**俯仰力矩（M_theta）​**​：控制无人机绕Y轴旋转（前后倾斜）
+    -   ​**偏航力矩（M_psi）​**​：控制无人机绕Z轴旋转（左右转向）
+-   ​**信号流向**​：`M` → `quadrotor3_system` → 影响无人机角加速度
 
 ----------
 
@@ -410,7 +410,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY5NjY1MzYyOSwxMDQzODQzMjQsMTI5Nj
+eyJoaXN0b3J5IjpbLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Nj
 k1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2
 NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4Nj
 gzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3
