四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -325,13 +325,13 @@ $$
 
 #### ​(1) `QuadrotorState (send state)`​
 
--   ​**作用**​：打包输出无人机的完整状态信息，供其他子系统（如控制器、可视化模块）使用。
+-   ​**作用**​：输出无人机的完整状态信息，供其他子系统（如PID控制器、可视化模块）使用
 -   ​**输出信号**​：
-    -   ​**位置**​：`x, y, z`（可能包含世界坐标系或机体坐标系数据）。
-    -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）。
-    -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）。
+    -   ​**位置**​：`x, y, z`（可能包含世界坐标系或机体坐标系数据）
+    -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）
+    -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）
 
-#### ​**​(2) `state` 和 `out_state`**​
+#### ​(2) `state` 和 `out_state`​
 
 -   ​**作用**​：将关键状态信号单独输出，用于实时监控或记录。
 -   ​**典型用途**​：
@@ -410,7 +410,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NzE0Mzc5NjIsLTUzMTk3OTIyOSwxMD
+eyJoaXN0b3J5IjpbLTEzOTAyMjE5ODYsLTUzMTk3OTIyOSwxMD
 QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
 MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
 IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
