四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -297,7 +297,7 @@ $$
 
 ----------
 
-### ​**3. 核心模块 `quadrotor3_system` 详解**​
+### ​3. 核心模块 quadrotor3_system详解
 
 #### ​**​(1) 功能概述**​
 
@@ -340,7 +340,7 @@ $$
 
 ----------
 
-### ​**5. 信号标签与连接逻辑**​
+### ​5. 信号标签与连接逻辑​
 
 #### ​**​(1) 输入信号线**​
 
@@ -410,7 +410,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzOTAyMjE5ODYsLTUzMTk3OTIyOSwxMD
+eyJoaXN0b3J5IjpbLTEwNjg2NDM3ODksLTUzMTk3OTIyOSwxMD
 QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
 MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
 IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
