四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -342,17 +342,17 @@ $$
 
 ### ​5. 信号标签与连接逻辑​
 
-#### ​**​(1) 输入信号线**​
+#### ​(1) 输入信号线​
 
 -   ​**F**​：总推力输入，直接作用于四旋翼的垂直运动。
 -   ​**M**​：三轴力矩输入，驱动无人机的滚转、俯仰、偏航运动。
 
-#### ​**​(2) 输出信号线**​
+#### ​**​(2) 输出信号线*​
 
 -   ​**x, y, z**​：无人机在三维空间中的位置坐标。
--   ​**dx, dy, dz**​：三轴线速度（位置的一阶导数）。
--   ​**phi, theta, psi**​：滚转、俯仰、偏航角（单位：弧度）。
--   ​**p, q, r**​：绕X/Y/Z轴的角速度（单位：rad/s）。
+-   ​**dx, dy, dz**​：三轴线速度（位置的一阶导数）
+-   ​**phi, theta, psi**​：滚转、俯仰、偏航角
+-   ​**p, q, r**​：绕X/Y/Z轴的角速度（角度位置的一阶导数）
 
 #### ​**​(3) 反馈回路**​
 
@@ -410,9 +410,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjg2NDM3ODksLTUzMTk3OTIyOSwxMD
-QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
-MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
-IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
-NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMTc4MjI2MzU4NiwtNTMxOTc5MjI5LDEwND
+M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
+MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
+MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
+NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
