四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -347,14 +347,14 @@ $$
 -   ​**F**​：总推力输入，直接作用于四旋翼的垂直运动。
 -   ​**M**​：三轴力矩输入，驱动无人机的滚转、俯仰、偏航运动。
 
-#### ​**​(2) 输出信号线*​
+#### ​​(2) 输出信号线​
 
 -   ​**x, y, z**​：无人机在三维空间中的位置坐标。
 -   ​**dx, dy, dz**​：三轴线速度（位置的一阶导数）
 -   ​**phi, theta, psi**​：滚转、俯仰、偏航角
 -   ​**p, q, r**​：绕X/Y/Z轴的角速度（角度位置的一阶导数）
 
-#### ​**​(3) 反馈回路**​
+#### ​​(3) 反馈回路​
 
 -   ​**状态反馈**​：输出信号（如姿态角、位置）可能通过外部控制器（如PID模块）生成新的 `F` 和 `M`，形成闭环控制。
 -   ​**示例**​：
@@ -410,7 +410,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc4MjI2MzU4NiwtNTMxOTc5MjI5LDEwND
+eyJoaXN0b3J5IjpbMTI4MzgxODk1NiwtNTMxOTc5MjI5LDEwND
 M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
 MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
 MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
